--- a/partners/templates/signup.html
+++ b/partners/templates/signup.html
@@ -652,7 +652,220 @@ G. As time and logistics permit, MA will be available for speaking
 engagements to promote the PARTNER’s agenda
         </pre>
       </div>
+      <!-- TOS CERTIFIED TRAINERS -->
+      <div data-bind='visible: check_family("ct");'>
+        <pre>
+Linux Professional Institute Italia
+vi Iacopo Nardi 71
+Firenze
+- Da ora LPI Italia -
 
+Preambolo:
+LPI Inc., Canada, è un'istituzione indipendente diffusa in tutto il mondo attraverso partner autorizzati, il suo scopo è definire degli standard uniformi per la formazione continua su Linux e sul Software Libero ed Open Source.
+
+LPI offre programmi di certificazione LPIC (Linux Professional Institute Certification), standardizzati, in diversi Paesi e con un programma per il riconoscimento delle competenze attraverso la certificazione delle competenze.
+
+LPI Italia è il Master Affiliate di LPI Inc, Canada, per l'Italia nel costesto della certificazione Linux e del Software Libero ed Open Source. LPI Italia fa espressamente parte di questo contratto.
+
+Grazie alla crescente domanda di prodotti Linux, aumenta anche la necessità di formazione tecnica. I programmi per la certificazione dei docenti forniscono la base per offrire corsi di formazione LPI di alta qualità e dotarli delle competenze e delle risorse necessarie.
+
+Il programma per LPI Certified Trainer (abbreviato LCT) è basato sulla certificazione LPI, divenuto standard globale.
+
+Attraverso questo accordo le parti si impegnano a partecipare a questo programma.
+
+1. Oggetto del contratto
+L'oggetto principale del presente contratto è l'adesione del Partner ad uno dei programmi di LPI Italia per la certificazione del dei docenti, designato come Docente Certificato LPI (LPI Certified Trainer LCT).
+LPI Italia fornisce ai partecipanti del programma servizi che consentono ai LCT di presentare un marchio di qualità nel settore pubblico e privato, promuovendosi con questo.
+
+2. Partnership
+Tutti i partecipanti al programma LCT diventano Partner come "LPI Certified Training Program". Con la firma di questo accordo i partner riconoscono come validi e rispettano tutti i requisiti presenti nel documento "LPI Certified Training Program".
+Eventuali modifiche alla documentazione divengono automaticamente parte del contratto. La documentazione valida per "LPI Certified Training Program" è scaricabile sul sito www.lpi-italia.org
+
+3. Assicurazioni / Controlli dei Partner
+Le parti garantiscono sull'esattezza delle informazioni fornite.
+Il Partners si impegna - nell'interesse dei particolari standard di qualità di LPI Italia - nel consentire controlli saltuari da parte di LPI Italia e, su richiesta, a dimostrare che le informazioni fornite siano corrette.
+
+4. Canone annuale, vantaggi per i partner LPI e inizio del contratto
+L'adesione al programma LCT ha un costo annuale di 99 Euro da pagare a LPI Italia.
+L'adesione da parte di docenti dipendenti di un centro ATP è di 84 Euro. Per due formatori registrati al programma il costo è di 72euro.
+L'adesione da parte di docenti dipendenti di un centro AAP è di 48 Euro.
+
+Il presente accordo è valido dal giorno _//___ per un periodo di 12 mesi.
+Il canone annuale (più IVA) deve essere versato ad LPI Italia entro 14 giorni.
+
+5. Utilizzo del logo
+Attraverso l'adesione al programma LCT il docente ha diritto all'utilizzo del logo LCT (Appendice A).
+Questo diritto viene concesso in uso non esclusivo e non trasferibile in tutta Italia.
+Non esiste un diritto di sub-licenza.
+
+Altri usi del logo non sono coperti da questo accordo.
+In particolare, il logo non può essere modificato in alcun modo ed essere riutilizzato. Il logo non può essere utilizzato a fini o al fianco di contenuti illegali.
+
+Il Partner di LPI Italia che utilizzi il logo in modo non autorizzato può essere perseguito per vie legali.
+
+6. Allontanamento
+LPI Italia si riserva il diritto di punire qualunque abuso di violazione del contratto da parte dei Partner e di approfondire, prendendo le opportune precauzioni, fino all'allontanamento del Partner.
+In caso di comportamenti particolarmente gravi LPI Italia si riserva il diritto di allontanare il partner senza preavviso.
+Danni derivanti dalla violazione degli obblighi del paragrafo precedente dovranno essere rimborsati dal partner che ha commesso gli abusi.
+
+7. Risoluzione del contratto
+Il presente accordo ha validità annuale ed è automaticamente rinnovato.
+In caso di disdetta, una delle due parti dovrà comunicare le proprie intenzioni tre (3) mesi prima.
+
+In caso di cessazione per giusta causa non è necessario il periodo di preavviso.
+Una ragione di giusta causa può essere l'insolvenza di una delle parti.
+Una ragione giusta causa per LPI Italia è il ritardo nel rinnovo del canone annuale.
+
+La risoluzione del contratto deve avvenire per lettera raccomandata.
+
+Con la fine del contratto viene meno l'autorizzazione all'utilizzo del logo.
+
+8. Compensazione - 
+
+9. Diritti, garanzie e responsabilità
+LPI Italia non garantisce sull'accuratezza dei dati forniti dal partner o dai suoi clienti. In questo caso LPI Italia è sollevata da ogni responsabilità.
+
+LPI Italia non garantisce l'accesso e lo scambio di dati ad alta velocità con il sito.
+
+LPI Italia definisce fuori dai propri confini la responsabilità per la sicurezza dei dati. Sono esclusi la garanzia ed i difetti o interruzioni dei computer dei partner, clienti o problemi di comunicazione con i server.
+
+Nei casi di responsabilità di violazione del contratto da parte di LPI Italia il danno rimborsato non potrà superare al cifra massima del canone annuale.
+Questa limitazione non si applica in caso di grave infortunio fisico e salute. Per la normale negligenza i danni non possono essere riferiti ad LPI Italia.
+
+È esclusa la responsabilità personale dei legali rappresentanti, agenti e dipendenti di LPI Italia dove sono causati da colpa lieve.???
+
+10. Disposizioni finali
+Possono essere presenti accordi sussidiari a questo contratto. Modifiche o integrazioni devono essere fatte per iscritto. Lo stesso vale per la rinuncia ai requisiti.
+Il presente contratto sostituisce tutti i precedenti accordi tra le parti. Accordi orali definiti precedentemente devono essere indicati in questo contratto per iscritto.
+In caso di non validità di una o più disposizioni del presente contratto è necessario sostituirle con una disposizione legalmente valida.
+
+Quello in oggetto non è un contratto di franchising.
+
+Controversie derivanti il presente contratto sono regolate in base alla legge italiana ed il foro competente è quello di Firenze.
+
+Firenze
+
+Luogo e data | Luogo e data
+LPI Italia | Firma del Partner
+
+| Nome in stampatello
+
+LPI Italia
+Via Iacopo Nardi 71
+Firenze
+Italia
+
+Indirizzo completo del partner e timbro
+#3 Aggiornato da Baldini Francesco 3 mesi fa
+06 Dic 2013 14:19
+Comment
+
+La traduzione con Google Translate è talvolta poco comprensibile, comunque:
+http://www.lpi-training.eu/uploads/media/Vertrag_LPI-Certified-Trainer_10-2011.pdf
+
+LPI Certified Trainer program
+
+Linux Professional Institute Italia
+
+Contratto Tra
+
+e
+
+Linux Professional Institute Italia
+vi Iacopo Nardi 71
+Firenze
+- Da ora LPI Italia -
+
+Preambolo:
+LPI Inc., Canada, è un'istituzione indipendente diffusa in tutto il mondo attraverso partner autorizzati, il suo scopo è definire degli standard uniformi per la formazione continua su Linux e sul Software Libero ed Open Source.
+
+LPI offre programmi di certificazione LPIC (Linux Professional Institute Certification), standardizzati, in diversi Paesi e con un programma per il riconoscimento delle competenze attraverso la certificazione delle competenze.
+
+LPI Italia è il Master Affiliate di LPI Inc, Canada, per l'Italia nel costesto della certificazione Linux e del Software Libero ed Open Source. LPI Italia fa espressamente parte di questo contratto.
+
+Grazie alla crescente domanda di prodotti Linux, aumenta anche la necessità di formazione tecnica. I programmi per la certificazione dei docenti forniscono la base per offrire corsi di formazione LPI di alta qualità e dotarli delle competenze e delle risorse necessarie.
+
+Il programma per LPI Certified Trainer (abbreviato LCT) è basato sulla certificazione LPI, divenuto standard globale.
+
+Attraverso questo accordo le parti si impegnano a partecipare a questo programma.
+
+1. Oggetto del contratto
+L'oggetto principale del presente contratto è l'adesione del Partner ad uno dei programmi di LPI Italia per la certificazione del dei docenti, designato come Docente Certificato LPI (LPI Certified Trainer LCT).
+LPI Italia fornisce ai partecipanti del programma servizi che consentono ai LCT di presentare un marchio di qualità nel settore pubblico e privato, promuovendosi con questo.
+
+2. Partnership
+Tutti i partecipanti al programma LCT diventano Partner come "LPI Certified Training Program". Con la firma di questo accordo i partner riconoscono come validi e rispettano tutti i requisiti presenti nel documento "LPI Certified Training Program".
+Eventuali modifiche alla documentazione divengono automaticamente parte del contratto. La documentazione valida per "LPI Certified Training Program" è scaricabile sul sito www.lpi-italia.org
+
+3. Assicurazioni / Controlli dei Partner
+Le parti garantiscono sull'esattezza delle informazioni fornite.
+Il Partners si impegna - nell'interesse dei particolari standard di qualità di LPI Italia - nel consentire controlli saltuari da parte di LPI Italia e, su richiesta, a dimostrare che le informazioni fornite siano corrette.
+
+4. Canone annuale, vantaggi per i partner LPI e inizio del contratto
+L'adesione al programma LCT ha un costo annuale di 99 Euro da pagare a LPI Italia.
+L'adesione da parte di docenti dipendenti di un centro ATP è di 84 Euro. Per due formatori registrati al programma il costo è di 72euro.
+L'adesione da parte di docenti dipendenti di un centro AAP è di 48 Euro.
+
+Il presente accordo è valido dal giorno _//___ per un periodo di 12 mesi.
+Il canone annuale (più IVA) deve essere versato ad LPI Italia entro 14 giorni.
+
+5. Utilizzo del logo
+Attraverso l'adesione al programma LCT il docente ha diritto all'utilizzo del logo LCT (Appendice A).
+Questo diritto viene concesso in uso non esclusivo e non trasferibile in tutta Italia.
+Non esiste un diritto di sub-licenza.
+
+Altri usi del logo non sono coperti da questo accordo.
+In particolare, il logo non può essere modificato in alcun modo ed essere riutilizzato. Il logo non può essere utilizzato a fini o al fianco di contenuti illegali.
+
+Il Partner di LPI Italia che utilizzi il logo in modo non autorizzato può essere perseguito per vie legali.
+
+6. Allontanamento
+LPI Italia si riserva il diritto di punire qualunque abuso di violazione del contratto da parte dei Partner e di approfondire, prendendo le opportune precauzioni, fino all'allontanamento del Partner.
+In caso di comportamenti particolarmente gravi LPI Italia si riserva il diritto di allontanare il partner senza preavviso.
+Danni derivanti dalla violazione degli obblighi del paragrafo precedente dovranno essere rimborsati dal partner che ha commesso gli abusi.
+
+7. Risoluzione del contratto
+Il presente accordo ha validità annuale ed è automaticamente rinnovato.
+In caso di disdetta, una delle due parti dovrà comunicare le proprie intenzioni tre (3) mesi prima.
+
+In caso di cessazione per giusta causa non è necessario il periodo di preavviso.
+Una ragione di giusta causa può essere l'insolvenza di una delle parti.
+Una ragione giusta causa per LPI Italia è il ritardo nel rinnovo del canone annuale.
+
+La risoluzione del contratto deve avvenire per lettera raccomandata.
+
+Con la fine del contratto viene meno l'autorizzazione all'utilizzo del logo.
+
+8. Compensazione - QUI NON HO CAPIT NULLA
+????????????????????????????
+
+9. Diritti, garanzie e responsabilità
+LPI Italia non garantisce sull'accuratezza dei dati forniti dal partner o dai suoi clienti. In questo caso LPI Italia è sollevata da ogni responsabilità.
+
+LPI Italia non garantisce l'accesso e lo scambio di dati ad alta velocità con il sito.
+
+LPI Italia definisce fuori dai propri confini la responsabilità per la sicurezza dei dati. Sono esclusi la garanzia ed i difetti o interruzioni dei computer dei partner, clienti o problemi di comunicazione con i server.
+
+Nei casi di responsabilità di violazione del contratto da parte di LPI Italia il danno rimborsato non potrà superare al cifra massima del canone annuale.
+Questa limitazione non si applica in caso di grave infortunio fisico e salute. Per la normale negligenza i danni non possono essere riferiti ad LPI Italia.
+
+È esclusa la responsabilità personale dei legali rappresentanti, agenti e dipendenti di LPI Italia dove sono causati da colpa lieve.???
+
+10. Disposizioni finali
+Possono essere presenti accordi sussidiari a questo contratto. Modifiche o integrazioni devono essere fatte per iscritto. Lo stesso vale per la rinuncia ai requisiti.
+Il presente contratto sostituisce tutti i precedenti accordi tra le parti. Accordi orali definiti precedentemente devono essere indicati in questo contratto per iscritto.
+In caso di non validità di una o più disposizioni del presente contratto è necessario sostituirle con una disposizione legalmente valida.
+
+Quello in oggetto non è un contratto di franchising.
+
+Controversie derivanti il presente contratto sono regolate in base alla legge italiana ed il foro competente è quello di Firenze.
+
+Firenze
+
+Luogo e data | Luogo e data
+LPI Italia | Firma del Partner
+</pre>
+      </div>
       <!-- TOS TRAINING PARTNERS -->
       <div data-bind='visible: check_family("atp");'>
         <pre>
@@ -965,7 +1178,7 @@ engagements to promote the PARTNER’s agenda
     <div class="checkbox">
       <label>
         <input data-bind='checked: tos_accepted' type="checkbox"> 
-          Ho letto e accetto i termini di servizio
+          Ho letto e accetto i Termini di Servizio
       </label>
     </div>
     
