--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -411,7 +411,7 @@
           </div>
 
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap"
+            <a href="#signup/lpi-aap-le"
                class="button">Aderisci ora</a>
           </div>
         </div>
@@ -446,7 +446,7 @@
 
           </div>
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap"
+            <a href="#signup/lpi-aap-pro"
                class="button">Aderisci ora</a>
           </div>
         </div>
@@ -492,7 +492,7 @@
           </div>
 
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap"
+            <a href="#signup/lpi-aap-le-gold"
                class="button">Aderisci ora</a>
           </div>
         </div>
@@ -533,7 +533,7 @@
           </div>
 
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap"
+            <a href="#signup/lpi-aap-le-platinum"
                class="button">Aderisci ora</a>
           </div>
         </div>
