--- a/partners/static/css/style.css
+++ b/partners/static/css/style.css
@@ -4,7 +4,6 @@ html, body {
 body {
 	font-family: Ubuntu;
 	color: #2B2B2B;
-
   background:rgb(244, 242, 243);
   position:relative;
 }
@@ -140,6 +139,7 @@ header {
   padding:4px 8px;
   border-radius:5px;
   color:#fff;
+  font-size:16px;
   font-weight:bold;
 }
 
@@ -150,6 +150,7 @@ header {
 }
 
 .partner-button {
+  
   background: #ffb76b; /* Old browsers */
   background: -moz-linear-gradient(top, #ffb76b 0%, #ffa73d 50%, #ff7c00 51%, #ff7f04 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffb76b), color-stop(50%,#ffa73d), color-stop(51%,#ff7c00), color-stop(100%,#ff7f04)); /* Chrome,Safari4+ */
@@ -295,6 +296,7 @@ header {
 }
 
 .joinus-image img {
+  width:100px;
 }
 
 .contact-logo {
