--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -204,7 +204,9 @@
   <script type='text/javascript' src='{% static "js/vendor/jquery/jquery.js" %}'></script>
   <script type='text/javascript' src='{% static "js/vendor/jquery/jquery.cookie.js" %}'></script>
   <script type='text/javascript' src='{% static "js/vendor/jquery/jquery.tagsinput.min.js" %}'></script>
-  <script type='text/javascript' src='{% static "js/vendor/jquery/jquery.isotope.min.js" %}'></script>
+  <script type='text/javascript' src='{% static "js/vendor/jquery/jquery.ui.widget.js" %}'></script>
+  <script type='text/javascript' src='{% static "js/vendor/jquery/jquery.iframe-transport.js" %}'></script>
+  <script type='text/javascript' src='{% static "js/vendor/jquery/jquery.fileupload.js" %}'></script>
   <script type='text/javascript' src='{% static "js/vendor/bootstrap/bootstrap.min.js" %}'></script>
   <script type='text/javascript' src='{% static "js/vendor/routie.min.js" %}'></script>
   <script type='text/javascript' src='{% static "js/vendor/knockout.js/knockout-3.0.0.js" %}'></script>
