--- a/partners/templates/wizard.html
+++ b/partners/templates/wizard.html
@@ -72,6 +72,22 @@
                placeholder='Titolo'><br>
       </div>
 
+      <div class="input-group">
+        <span class="input-group-addon">
+          Email
+        </span>          
+        <input type='text' class='form-control' data-bind='value: owner_email'
+               placeholder='Email'><br>
+      </div>
+
+      <div class="input-group">
+        <span class="input-group-addon">
+          Telefono
+        </span>          
+        <input type='text' class='form-control' data-bind='value: owner_phone'
+               placeholder='Telefono'><br>
+      </div>
+
       <div class="input-group" data-bind='visible: check_family("ct");'>
         <span class="input-group-addon">
           LPIC ID
