--- a/partners/templates/info.html
+++ b/partners/templates/info.html
@@ -125,7 +125,7 @@
     <section class='box-section logo-section'>
       <div class="row">
         <img class='lpi-partnership-logo' 
-             src='http://partners.lpi-italia.org/static/images/logo-lpi-big.png'/>
+             src='http://partner.lpi-italia.org/static/images/logo-lpi-big.png'/>
       </div> 
     </section>
 
