--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -289,7 +289,7 @@
   <ul class='prtn-box-container'>
      <li class='prtn-box col-sm-6'>
       <div class='prtn-box-inner prtn-box-training' style='height:1050px'>
-        <h3>Linx Essentials Approved Training Partner</h3>
+        <h3>Linux Essentials Approved Training Partner</h3>
         <div class='prtn-box-icon'>
           <img src='{% static "images/lpi-atp-logo.png" %}'>
         </div>
