--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -17,7 +17,7 @@
       <div class='prtn-box-inner prtn-box-services'>
         <h3>Service Provider</h3>
         <div class='prtn-box-icon'>
-          <img src='{% static "lpi/lpi-csp.png" %}'>
+          <img src='{% static "lpi/lpi-sp.png" %}'>
         </div>
         <div class='prtn-box-price'>
           GRATUITO
@@ -149,7 +149,9 @@
     <li class='prtn-box col-sm-3 prtn-box-1 col-sm-offset-3'>
       <div class='prtn-box-inner prtn-box-teachers'>
         <h3>Certified Trainer</h3>
-        <div class='prtn-box-icon'></div>
+        <div class='prtn-box-icon'>
+          <img src='{% static "lpi/lpi-ct.png" %}'>
+        </div>
         <div class='prtn-box-price'>
           50 &euro;/anno<br>
           IL PRIMO ANNO &Egrave; GRATUITO!
@@ -329,7 +331,7 @@
       <div class='prtn-box-inner prtn-box-training' style='height:1050px'>
         <h3>Linux Professionals Approved Training Partner</h3>
         <div class='prtn-box-icon'>
-          <img src='{% static "lpi/lpi-atp.png" %}'>
+          <img src='{% static "lpi/lpi-atp-pro.png" %}'>
         </div>
         <div class='prtn-box-price'>
           650  &euro;/anno
@@ -387,7 +389,7 @@
         <div class='prtn-box-inner' style='height:800px'>
           <h3>Linux Essentials Academic<br> PARTNER</h3>
           <div class='prtn-box-icon'>
-            <img src='{% static "lpi/lpi-aap.png" %}'>
+            <img src='{% static "lpi/lpi-aap-le.png" %}'>
           </div>
           <div class='prtn-box-price'>
           250  &euro;/anno
@@ -421,7 +423,7 @@
         <div class='prtn-box-inner' style='height:800px'>
           <h3>Linux Professionals Academic <br>PARTNER</h3>
           <div class='prtn-box-icon'>
-            <img src='{% static "lpi/lpi-aap.png" %}'>
+            <img src='{% static "lpi/lpi-aap-pro.png" %}'>
           </div>
           <div class='prtn-box-price'>
           250  &euro;/anno
@@ -463,7 +465,7 @@
         <div class='prtn-box-inner' style='height:950px'>
           <h3>Linux Essentials Academy<br>GOLD</h3>
           <div class='prtn-box-icon'>
-            <img src='{% static "lpi/lpi-aap.png" %}'>
+            <img src='{% static "lpi/lpi-aap-le-gold.png" %}'>
           </div>
           <div class='prtn-box-price'>
           650  &euro;/anno
@@ -502,7 +504,7 @@
         <div class='prtn-box-inner' style='height:950px'>
           <h3>Linux Essentials Academy<br>PLATINUM</h3>
           <div class='prtn-box-icon'>
-            <img src='{% static "lpi/lpi-aap.png" %}'>
+            <img src='{% static "lpi/lpi-aap-le-platinum.png" %}'>
           </div>
           <div class='prtn-box-price'>
           1.150  &euro;/anno
